<resources>
    <string name="app_name">Medic</string>
    <string name="title_activity_account_recover">AccountRecoverActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello">Hello</string>
    <string name="search_elements">search_elements</string>
    <string name="hospital_seat">Hospital Seat</string>
    <string name="dr_schedule">Dr Schedule</string>
    <string name="report">Report</string>
    <string name="today_notice">Let\'s try if every thing is doing well or not. make the line twins.Let\'s try if every thing is doing well or not. make the line twins.</string>
    <string name="home">home</string>
    <string name="favourite">favourite</string>
    <string name="account">account</string>
    <string name="settings">settings</string>
    <string name="title_activity_login_as">LoginAsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tips">Type Here the tips for today!!</string>
</resources>