<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentHomeActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background_agent"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="15dp"
            android:text="Forhad"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/textHello"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/imageMenu"
            android:layout_width="72dp"
            android:layout_height="27dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/app_name"
            android:text="Logout"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/textHello"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textHello"
            app:layout_constraintVertical_bias="0.0"
            app:tint="@color/white"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageMenu">

            <EditText
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_elements"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:importantForAutofill="no"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/search_icon_background"
                android:contentDescription="@string/app_name"
                android:padding="6dp"
                android:src="@drawable/ic_search"
                app:tint="@color/colorPrimary" />


        </LinearLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutGoal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/layoutfinance"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/seat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hospital_seat"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutfinance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/layoutGoal"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/notification" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/report"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="176dp"
                android:background="@drawable/trebding_background"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="@id/layoutfinance"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/layoutGoal"
                app:layout_constraintTop_toBottomOf="@id/layoutfinance">

                <TextView
                    android:id="@+id/texttrending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_rectangle_background"
                    android:paddingStart="8dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="8dp"
                    android:text="Today's Tips"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_favorite_border"
                    app:layout_constraintBottom_toBottomOf="@id/texttrending"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/texttrending"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/noticeboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:text="@string/today_notice"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/texttrending" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconSize="30dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />
    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>
</androidx.constraintlayout.widget.ConstraintLayout>